force-app/main/default/objects/Lead/fields/Calificaci_n_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Calificaci_n_Cuenta__c</fullName>
    <inlineHelpText>Calificación de la cuenta a la que pertenece el lead.</inlineHelpText>
    <label>Calificación Cuenta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alto Interés</fullName>
            </value>
            <value>
                <fullName>Interés</fullName>
            </value>
            <value>
                <fullName>No Interés</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>