force-app/main/default/objects/Lead/fields/Celular__c.field-meta.xml
<CustomField>
    <fullName>Celular__c</fullName>
    <description>Número de Contacto Celular</description>
    <label>Celular</label>
    <type>Phone</type>
</CustomField>