force-app/main/default/objects/Lead/fields/Pa_s__c.field-meta.xml
<CustomField>
    <fullName>Pa_s__c</fullName>
    <description>País al que pertenece la institución del candidato</description>
    <label>País</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Argentina</fullName>
            </value>
            <value>
                <fullName>Bolivia</fullName>
            </value>
            <value>
                <fullName>Brasil</fullName>
            </value>
            <value>
                <fullName>Chile</fullName>
            </value>
            <value>
                <fullName>Colombia</fullName>
            </value>
            <value>
                <fullName>Costa Rica</fullName>
            </value>
            <value>
                <fullName>Ecuador</fullName>
            </value>
            <value>
                <fullName>El Salvador</fullName>
            </value>
            <value>
                <fullName>Guatemala</fullName>
            </value>
            <value>
                <fullName>Honduras</fullName>
            </value>
            <value>
                <fullName>Mexico</fullName>
            </value>
            <value>
                <fullName>Nicaragua</fullName>
            </value>
            <value>
                <fullName>Panamá</fullName>
            </value>
            <value>
                <fullName>Paraguay</fullName>
            </value>
            <value>
                <fullName>Perú</fullName>
            </value>
            <value>
                <fullName>República Dominicana</fullName>
            </value>
            <value>
                <fullName>Uruguay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>