force-app/main/default/objects/Lead/fields/pais__c.field-meta.xml
<CustomField>
    <fullName>pais__c</fullName>
    <description>País</description>
    <inlineHelpText>País</inlineHelpText>
    <label>pais</label>
    <type>TextArea</type>
</CustomField>