force-app/main/default/objects/Lead/fields/Puesto__c.field-meta.xml
<CustomField>
    <fullName>Puesto__c</fullName>
    <description>Nivel del cargo del Lead que se ha registrado</description>
    <inlineHelpText>Nivel del cargo del Lead que se ha registrado</inlineHelpText>
    <label>Puesto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Presidencia</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Gerencia</fullName>
            </value>
            <value>
                <fullName>Jefe</fullName>
            </value>
            <value>
                <fullName>Analista - Asistente</fullName>
            </value>
            <value>
                <fullName>Estudiante</fullName>
            </value>
            <value>
                <fullName>Periodista</fullName>
            </value>
            <value>
                <fullName>Consultor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>