force-app/main/default/objects/Lead/fields/rea_te_Desempe_as__c.field-meta.xml
<CustomField>
    <fullName>rea_te_Desempe_as__c</fullName>
    <label>Área te Desempeñas</label>
    <type>TextArea</type>
</CustomField>