force-app/main/default/objects/Lead/fields/Repetido__c.field-meta.xml
<CustomField>
    <fullName>Repetido__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Repetido</label>
    <type>Checkbox</type>
</CustomField>