force-app/main/default/objects/Lead/fields/Requerimiento__c.field-meta.xml
<CustomField>
    <fullName>Requerimiento__c</fullName>
    <label>Requerimiento</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>