force-app/main/default/objects/Lead/fields/Rol_en_Instituci_n__c.field-meta.xml
<CustomField>
    <fullName>Rol_en_Instituci_n__c</fullName>
    <label>Rol en Institución</label>
    <type>TextArea</type>
</CustomField>