force-app/main/default/objects/Lead/fields/Tipo_de_Instituci_n__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Instituci_n__c</fullName>
    <label>Tipo de Institución</label>
    <type>TextArea</type>
</CustomField>